[SPARK] Port Spark 1.3 fixes to 1.2 module